# git-binary-bup

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: bup_odb.h  bup_traversal.h  chunk_utils.h
src/: bup_odb.c  bup_traversal.c  chunk_utils.c  git2.c
tests/: test_backend.c  test_chunk_reuse.c  test_cli.c  test_history_chunks.c  test_many_commits.c  test_repack_fsck.c
